2007-11-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Unstable release 1.050.

2007-11-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm: Add entries for the various surfaces to the API
	listing.

	* Makefile.PL: Update the list of exported symbols.  (Reported by
	spicy jack)

2007-10-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/CairoFont.t: Really don't use the hash-ref variant of the
	constant pragma this time.

	* Cairo.pm
	* Cairo.xs
	* CairoFt.xs
	* Makefile.PL
	* cairo-perl.h
	* cairo-perl.typemap
	* examples/freetype-font.pl
	* t/CairoFt.t: Add support for part of cairo's FreeType
	integration API.  Currently, that's just
	Cairo::FtFontFace::create, which lets you create a cairo font face
	from a FreeType font face.

2007-10-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/Cairo.t
	* t/CairoPattern.t: When Test::Number::Delta is not available,
	skip the relevant tests instead of faking passes.  (Suggested by
	Aristotle Pagaltzis)

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/Cairo.t
	* t/CairoFont.t
	* t/CairoPath.t
	* t/CairoPattern.t
	* t/CairoSurface.t: Don't use the hash-ref variant of the constant
	pragma.  It's not supported by the version that ships with perl
	5.6.

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS
	* README: Release 1.043.

2007-10-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Use BEGIN { require 5.006; } instead of require
	v5.6.0.  Make missing Test::Number::Delta non-fatal; add it to the
	build_requires META.yml field.

	* t/Cairo.t
	* t/CairoPattern.t: Cope with Test::Number::Delta being
	unavailable.

2007-10-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Make EU::MM output configure_requires and no_index
	information when generating META.yml.

	* t/CairoSurface.t (PNG surface tests): Since exceptions are
	actually propagated now, throw the same kind of exception we test
	for.
